--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "mocha-multi": "^1.0.1",
     "sinon": "^1.17.7"
   },
   "scripts": {
